@@ -13,10 +13,10 @@ dnl  Although the generated configure script is under the GNU Public
 dnl  License, Extended Tcl remains freely redistributable for any purpose,
 dnl  including commercial use.
 dnl----------------------------------------------------------------------------
-dnl $Id: configure.in,v 8.21 1998/02/02 22:35:19 markd Exp $
+dnl $Id$
 dnl----------------------------------------------------------------------------
 AC_INIT(../tcl/generic/tclExtend.h)
-ifdef([AC_REVISION],AC_REVISION($Revision: 8.21 $),)dnl
+ifdef([AC_REVISION],AC_REVISION($Revision$),)dnl
 
 # If `configure' is invoked (in)directly via `make', ensure that it
 # encounters no `make' conflicts.  Ignore error if shell does not have
@@ -244,7 +244,7 @@ if test "$TKX_BUILD" = "YES"; then
 fi
 
 # Tk doesn't provide its own search flags, but should.
-TK_LD_SEARCH_FLAGS=$TCL_LD_SEARCH_FLAGS
+TK_LD_SEARCH_FLAGS=$TK_LD_SEARCH_FLAGS
 
 AC_SUBST(TK_VERSION)
 AC_SUBST(TK_DEFS)
@@ -583,7 +583,7 @@ if test "X$TCL_LD_SEARCH_FLAGS" != "X"; then
 	LIB_RUNTIME_DIR=`echo ${LIB_RUNTIME_DIR} |sed -e 's/:/ -L/g'`
     fi
 fi
-eval "TKX_CC_SEARCH_FLAGS=\"$TCL_LD_SEARCH_FLAGS\""
+eval "TKX_CC_SEARCH_FLAGS=\"$TK_CC_SEARCH_FLAGS\""
 case $TCL_SHLIB_LD in
     *ld*)
 	TKX_LD_SEARCH_FLAGS=`echo ${TKX_CC_SEARCH_FLAGS} |sed -e "s|-Wl,||g" -e "s|,| |g"`
@@ -595,6 +595,20 @@ esac
 
 AC_SUBST(TKX_LD_SEARCH_FLAGS)
 AC_SUBST(TKX_CC_SEARCH_FLAGS)
+
+#------------------------------------------------------------------------------
+# Determine if Tcl was built with threading support. We look in
+# the TCL_DEFS variable from tclConfig.sh for DTCL_THREADS=1. Would
+# be nice if we could query tcl.
+#------------------------------------------------------------------------------
+AC_MSG_CHECKING("if tcl was built with thread support")
+if echo ${TCL_DEFS} | grep 'DTCL_THREADS=1' >/dev/null 2>/dev/null; then
+    TCL_THREAD_TEST="tclThreadTest.o"
+    AC_MSG_RESULT(yes)
+else
+    AC_MSG_RESULT(no)
+fi
+AC_SUBST(TCL_THREAD_TEST)
 
 #------------------------------------------------------------------------------
 # Determine if we have symbolic links on the filesystem we are building
