@@ -1416,3 +1416,7 @@
 ===============================================================================
 5 May 99: Released TclX 8.1.0
 ===============================================================================
+10 May 99:
+  o Fixed tests to build when threads are enabled.
+  o Pickup TK_LD_SEARCH_FLAGS in configure.
+-------------------------------------------------------------------------------
